# tool-capability-protocol

./: .gitignore  .gitleaks.toml  .gitleaksignore  .tcp-proxy-packs.yaml  ACTIVE_SURFACE.md  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.lightweight  Dockerfile.tcp-cc-proxy  KNOWN_LIMITATION_REMOTE_CONTROL.md  PROVENANCE.md  PROXY_LANE_CLOSEOUT.md  ablation-results.json  exp3-results.json  layered-exp4-arm-b1.json  layered-exp4-baseline.json  matrix-results.json  pyproject.toml  scale-results.json
.claude/: settings.local.json
.forgejo/scripts/: llm-review.py
.forgejo/workflows/: _diag-checkout.yml  _diag-run.yml  llm-review.yml  quality.yml
.github/workflows/: claude-session-sync.yml  code-review.yml  dependency-review.yml  (+3 more)
conformance/: pairs_v013.json
docs/: EVIDENCE.md  POLICY.md  SNF.md  TCP-WP-3-technical-report.md  TCP_DESCRIPTOR_REVIEW.md  TCP_DS_3_TOOL_PACK_CONTROLLER.md  TCP_HARNESS_ARCHITECTURE.md  TCP_HARNESS_BENCHMARK.md  TCP_HARNESS_BENCHMARK_MT2.md
mcp-registry/: README.md  __init__.py  example_usage.py  pyproject.toml  requirements.txt  setup.py
mcp-registry/api/: __init__.py  database.py  models.py  server.py
mcp-registry/monitor/: __init__.py  batch_health.py  health.py
mcp-registry/tests/: __init__.py  conftest.py  test_api.py  test_verifier.py
mcp-registry/verifier/: __init__.py  validator.py
mcp-registry/web/: index.html
scripts/: _ci_smoke.py  bootstrap_exp3.py  build_tcp_data_1_audit_set.py  generate_audit_set.py  mt16_measure.py  replay_reducer_demotion.py  run-lightweight-demo.py  run_exp6.py  shadow_analysis.py  stamp_tlv_hex.py  tcp_data_1_calibration.py  tcp_proxy_container.sh  tcp_proxy_ensure.sh  tcp_shadow_prompt.py  tcp_shadow_session.py  tcp_shadow_tool.py
tcp/: __init__.py  cli.py  cli_selftest.py  demo_complete_security_system.py
tcp-server-full/: complete_deployment.sh
tcp_v01/: __init__.py  test_ascii.py  test_basic.py  test_simple.py
tests/: conftest.py  test_precision_regressions.py  test_snf.py
(+140 files in other folders)
